[tool.poetry]
name = "transaction-webhook-service"
version = "1.0.0"
description = "Reliable transaction webhook service for payment processors"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.1"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
python-dateutil = "^2.8.2"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
